# troy-nova

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  changelog.md  readme.md
examples/: 10_bfv_matmul.cu  11_ckks_matmul.cu  12_lwes.cu  13_ring2k.cu  14_bfv_conv2d.cu  15_batched_operation.cu  1_bfv_basics.cu  20_memory_pools.cu  2_encoders.cu  30_issue_multithread.cu  3_levels.cu  4_bgv_basics.cu  5_ckks_basics.cu  6_rotation.cu  7_serialization.cu  99_quickstart.cu  CMakeLists.txt  examples.cu  examples.cuh  examples.h
pybind/: .gitignore  CMakeLists.txt  __init__.py  binder.cu  develop.sh  setup.py  test.py  test_conv2d.py  test_matmul.py
pybind/src/: basics.cu  batch_encoder.cu  binder.cu  ciphertext.cu  ckks_encoder.cu  conv2d_helper.cu  decryptor.cu  encryption_parameters.cu  encryptor.cu  evaluator.cu  he_context.cu  header.cuh  header.h  key_generator.cu  kswitch_keys.cu  lwe_ciphertext.cu  macro_defs.cuh  macro_defs.h  matmul_helper.cu  modulus.cu  plaintext.cu  polynomial_encoder_ring2k.cu  public_key.cu  random_generator.cu  secret_key.cu
pybind/tests/: custom.py  test.py  test_basics.py  test_conv2d.py  test_he_operations.py  test_matmul.py  utils.py
rustbind/: Cargo.toml  build.rs  readme.md  wrapper.cpp  wrapper.h
rustbind/interfaces/: memory_pool.cu  memory_pool.cuh
rustbind/reexports/: basics.h  encryption_parameters.h  memory_pool.h  modulus.h  utils.h
rustbind/src/: basics.rs  encryption_parameters.rs  interfaces.rs  lib.rs  memory_pool.rs  modulus.rs
scripts/: compare_bench.py  compare_bench.sh  test_matmul.sh  test_memory_pool.sh
src/: CMakeLists.txt  batch_encoder.cu  batch_encoder.cuh  batch_encoder.h  batch_utils.h  ciphertext.cu  ciphertext.cuh  ciphertext.h  ckks_encoder.cu  ckks_encoder.cuh  ckks_encoder.h  coeff_modulus.cu  coeff_modulus.cuh  coeff_modulus.h  context_data.cu  context_data.cuh  context_data.h  decryptor.cu  decryptor.cuh  decryptor.h  encryption_parameters.cu  encryption_parameters.cuh  encryption_parameters.h  encryptor.cu  encryptor.cuh  encryptor.h  evaluator.cu  evaluator.cuh  evaluator.h  evaluator_keyswitching.cu  evaluator_keyswitching_core.cu  evaluator_lwes.cu  evaluator_modswitch.cu  evaluator_multiply_plain.cu  evaluator_transform_ntt.cu  evaluator_translate.cu  evaluator_translate_plain.cu  evaluator_utils.h  he_context.cu  he_context.cuh  (+22 more)
src/app/: bfv_ring2k.cu  bfv_ring2k.cuh  bfv_ring2k.h  cipher2d.cu  cipher2d.cuh  cipher2d.h  conv2d.cu  conv2d.cuh  conv2d.h  encoder_adapter.cu  encoder_adapter.cuh  encoder_adapter.h  matmul.cu  matmul.cuh  matmul.h  matmul_ckks.cu  matmul_ckks.cuh
src/fgk/: dyadic_convolute.cu  dyadic_convolute.h  ntt_cooperative.cu  ntt_cooperative.h  ntt_grouped.cu  ntt_grouped.h  rns_tool.cu  rns_tool.h  switch_key.cu  switch_key.h  translate_plain.cu  translate_plain.h
src/utils/: aes_impl.inc  basics.cu  basics.cuh  basics.h  box.cuh  box.h  box_batch.h  compression.h  compression_zstd.cpp  constants.h  dynamic_array.cuh  dynamic_array.h  galois.cu  galois.cuh  galois.h  hash.cpp  hash.h  he_standard_params.h  memory_pool.cu  memory_pool.cuh  memory_pool.h  memory_pool_none.in  memory_pool_safe.in  memory_pool_unsafe.in  ntt.cu  ntt.cuh  ntt.h  number_theory.cu  number_theory.cuh  number_theory.h  poly_small_mod.cu  poly_small_mod.cuh  poly_small_mod.h  poly_to_string.cu  poly_to_string.cuh  poly_to_string.h  polynomial_buffer.cuh  polynomial_buffer.h  random_generator.cu  random_generator.cuh  (+24 more)
test/: CMakeLists.txt  argparse.cpp  argparse.h  batch_encoder.cu  batch_encoder_batched.cu  ckks_encoder.cu  custom.cu  encryptor.cu  encryptor_batched.cu  evaluator.cu  evaluator_batched.cu  he_context.cu  lwe.cu  main.cu  modulus.cu  multithread.cu  serialize.cu  serialize_zstd.cu  special_prime_for_encryption.cu  temp.cu  test.cuh  test.h  test_adv.cu  test_adv.cuh  test_adv.h  test_multithread.cu  test_multithread.cuh  test_multithread.h
test/app/: bfv_ring2k.cu  conv2d.cu  conv2d_ckks.cu  conv2d_ring2k.cu  matmul.cu  matmul_ckks.cu  matmul_ring2k.cu
test/bench/: argument_helper.h  compare.py  conv2d.cu  he_operations.cu  matmul.cu  ntt.cu  timer.cuh
test/utils/: basics.cu  box.cu  galois.cu  ntt.cu  random_generator.cu  rns.cu  rns_base.cu  rns_tool.cu  uint_small_mod.cu
