[package]
name = "troy-rustbind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = { version = "1.0.124", features = ["c++17"] }

[build-dependencies]
cmake = "0.1.50"
cxx-build = "1.0.124"

[features]
default = ["memory-pool-safe"]
memory-pool-safe = []
memory-pool-unsafe = []
memory-pool-none = []