[package]
name = "rustbind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = { version = "0.69.4", features = ["experimental"] }
cc = "1.0.104"
cmake = "0.1.50"

[features]
default = ["memory-pool-safe"]
memory-pool-safe = []
memory-pool-unsafe = []
memory-pool-none = []
